--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
   <body>
     <div class="header-menu">
       <div class="logo">
-        <img src="./image/logo.png" alt="" />
+        <!-- <img src="./image/logo.png" alt="" /> -->
+        <h2>RentMeNow</h2>
       </div>
       <div class="header-menu-left">
-        <a href="" class="lien-menu" style="border-bottom: 4px solid #fbc531"
-          >Accueil</a
-        >
-        <a href="" class="lien-menu">Gallerie</a>
-
+        <a href="./index.html" class="lien-menu" style="border-bottom: 4px solid #fbc531">Accueil</a>
+        <a href="./gallerie.html" class="lien-menu">Gallerie</a>
         <a href="./contact.html" class="lien-menu">Contact</a>
       </div>
       <div class="header-menu-right">
