--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="header-menu">
       <div class="logo">
-        <!-- <img src="./image/logo.png" alt="" /> -->
-        <h2>RentMeNow</h2>
+        <img src="./image/logo.png" alt="" />
+        
       </div>
       <div class="header-menu-left">
         <a href="./index.html" class="lien-menu" style="border-bottom: 4px solid #fbc531">Accueil</a>
@@ -24,6 +24,11 @@
         </a>
       </div>
     </div>
+    <div class="header-menu-right1">
+          <a href="./reservation.html">
+            <button><p>Réservation</p></button>
+          </a>
+        </div>
     <div class="header">
       <div class="header-image">
         <div class="header-image-left">
@@ -41,11 +46,7 @@
             Your browser does not support HTML video.
           </video>
         </div>
-        <div class="header-menu-right1">
-          <a href="./reservation.html">
-            <button><p>Réservation</p></button>
-          </a>
-        </div>
+        
       </div>
     </div>
     <div class="main">
