--- a/gallerie.html
+++ b/gallerie.html
@@ -6,21 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallerie</title>
     <link rel="stylesheet" href="./style/gallerie.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <div class="header-menu">
       <div class="logo">
         <img src="./image/logo.png" alt="" />
       </div>
+      <div class="toggle">
+        <div class="ouvre">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+        <div class="ferme">
+          <i class="fa-solid fa-x"></i>
+        </div>
+      </div>
       <div class="header-menu-left">
         <a href="./index.html" class="lien-menu">Accueil</a>
         <a
           href="./gallerie.html"
           class="lien-menu"
-          style="border-bottom: 4px solid #fbc531"
+          id="lien-menu2"
           >Gallerie</a
         >
         <a href="./contact.html" class="lien-menu">Contact</a>
+        <a href="./reservation.html" class="lien-menu" id="lien-menu4">Reservation</a>
       </div>
       <div class="header-menu-right">
         <a href="./reservation.html">
@@ -139,5 +152,6 @@
         <img src="./image/twitter.png" alt="image" />
       </div>
     </div>
+    <script src="./navbar.js"></script>
   </body>
 </html>
